# Library-Management

./: .gitignore  Báo cáo đồ án 1.docx  CMakeLists.txt  books.txt  readers.txt  report.docx  tickets.txt
include/: book.h  reader.h  ticket.h
include/controllers/: book-controller.h  menu-controller.h  reader-controller.h  statistic-controller.h  ticket-controller.h  utils-controller.h
include/models/: book-model.h  reader-model.h  ticket-model.h
include/views/: book-view.h  menu-view.h  reader-view.h  statistic-view.h  ticket-view.h
src/: main.cpp
src/controllers/: book-controller.cpp  menu-controller.cpp  reader-controller.cpp  statictis-controller.cpp  ticket-controller.cpp  utils-controller.cpp
src/models/: book-model.cpp  books-model.cpp  reader-model.cpp  ticket-model.cpp
src/views/: book-view.cpp  menu-view.cpp  reader-view.cpp  statistic-view.cpp  ticket-view.cpp
